feat: default shipments to urbanebolt
